fix: overflow issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@
 
   body,
   .p {
-    @apply bg-primary-50 px-2 pb-20 text-sm text-primary-700;
+    @apply overflow-x-hidden bg-primary-50 px-2 pb-20 text-sm text-primary-700;
   }
   /* #endregion  /**======== Typography =========== */
 }
